packages/web-components/src/components/tabs/tabs-story.scss
//
// Copyright IBM Corp. 2019, 2024
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//

@use '@carbon/styles/scss/config' as *;
@use '@carbon/styles/scss/spacing' as *;
@use '@carbon/styles/scss/theme' as *;

.#{$prefix}-ce-demo-devenv--tab-panels {
  flex: 1;
  align-self: stretch;
  padding: $spacing-05;
}

