fix(tabs): align tabs story panel spacing and contained panel styles

--- a/packages/web-components/src/components/tabs/tabs-story.scss
+++ b/packages/web-components/src/components/tabs/tabs-story.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2019, 2024
+// Copyright IBM Corp. 2019, 2026
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -8,9 +8,23 @@
 @use '@carbon/styles/scss/config' as *;
 @use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/styles/scss/theme' as *;
+@use '@carbon/styles/scss/utilities/layout';
+@use '@carbon/styles/scss/components/form/form' as form;
+
+@include form.form;
 
 .#{$prefix}-ce-demo-devenv--tab-panels {
   flex: 1;
   align-self: stretch;
   padding: $spacing-05;
+}
+
+.#{$prefix}--tab-content {
+  @include layout.use('density', $default: 'normal');
+
+  padding: layout.density('padding-inline');
+}
+
+#{$prefix}-tabs[type='contained'] ~ .#{$prefix}--tab-content {
+  background: $layer;
 }
